--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ body {
   --b-accent: #ffffff;
   --s-button: #553da3;
   --name-color: #ffffff;
-  --about-color: #594a8c;
+  --about-color: #8c4a4a;
   --youtube: rgb(255, 0, 0);
 }
 
